manifests/immich/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server-external 
  namespace: immich 
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 2283        
      targetPort: 2283
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: immich
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - immich.seanchoo.top
    secretName: immich-tls
  rules:
  - host: immich.seanchoo.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-server-external
            port:
              number: 2283
