manifests/immich/tailscale-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-service-ts
  namespace: immich 
spec:
  selector:
    app: immich
  type: ClusterIP
  ports:
    - name: http
      port: 2283
      targetPort: 2283
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ts-ingress
  namespace: immich
spec:
  ingressClassName: tailscale
  # tls:
  #   - hosts:
  #       - immich.hydra-cliff.ts.net
  rules:
    - host: immich.hydra-cliff.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server-ts
                port:
                  number: 2283
